<resources>
    <string name="app_title">SMAC INV</string>
    <string name="app_name">SMAC INV 1.2</string>
    <string name="action_settings">Settings</string>
    <string name="scanPrompt">Waiting for scan</string>
    <string name="title_activity_successful_scan">Successful Scan</string>
    <string name="storeBtn">Store Item</string>
    <string name="withdrawBtn">Withdraw Item</string>
    <string name="currentStock">Current Stock:</string>
    <string name="currentStockValue">\???</string>
    <string name="partID">Part Description:</string>
    <string name="partIDDisplay">\???</string>
    <string name="test">TEST</string>
    <string name="inputField">Item Quantity</string>
    <string name="title_activity_input_screen">input_screen</string>
    <string name="connectingToServer">Connecting To Server</string>
    <string name="title_activity_waiting_for_scan">waiting_for_scan</string>
    <string name="partBarcode">Part Number</string>
    <string name="partDescription">Extended Description</string>
    <string name="partDescriptionDisplay">\???</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_new_part">new_part</string>
    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>
    <string name="pref_title_ip_address">Default IP address</string>
    <string name="pref_default_ip_address">192.168.0.105</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retake_inventory">Retake Inventory</string>
    <string name="title_activity_retake_inventory">retake_inventory</string>
    <string name="set_new_value">Set New Value</string>
    <string name="cancel">Cancel</string>
    <string name="last_changed">Last Changed at:</string>
    <string name="unknown_location">\???</string>
    <string name="current_location">Current Location</string>
    <string name="input_current_location"></string>
    <string name="location_input_prompt">Input Current Location</string>


</resources>
